# sci-fi-generator

./: .gitignore  pyproject.toml  pytest.ini
documentation/: requirements.md
documentation/diagrams/: ui_overview.drawio
src/: main.py  test_main.py
src/domain/domain_objects/character/: age_factory.py  attribute_roller.py  attributes.py
src/domain/domain_objects/character/leader/: leader.py  leader_factory.py  live_events.py
src/domain/domain_objects/civilisation/: civilisation.py  civilisation_factory.py
src/domain/domain_objects/world/: terrain.py
src/domain/tables/character/: convictions.py  gender.py
src/domain/tables/civilisation/: civilisation_backgrounds.py  civilization_origin_event.py  culture.py  migration_pattern.py  modern_civilisation_professions.py  social_class.py  social_structure.py
src/domain/tables/world/: biomes.py  geographic_features.py  hydrological_features.py  locational_terrains.py
src/ui/: MainWindow.py
src/ui/components/button/: sci_fi_button.py  sci_fi_button_styles.py
src/ui/components/labels/: sci_fi_label_style.py
src/ui/components/screens/: BaseScreen.py  civilisation_generation_screen.py  civilisation_generation_viewmodel.py  leader_screen.py  main_menu_screen.py  window_style.py
src/ui/navigation/: ScreenType.py  mediator.py  screen_definition.py
tests/: conftest.py  main_test.py
tests/domain/world/: terrain_test.py
tests/ui/: MainWindow_test.py
tests/ui/screens/: civilisation_generation_viewmodel_test.py
